--- a/style.css
+++ b/style.css
@@ -116,15 +116,16 @@ button {
 /* QUOTE */
 
 .quote-sect {
+    align-items: center;
     background-color: #E5E7EB;
     color: #1F2937;
-    font-size: 36px;
-    font-weight: lighter;
-    font-style: italic;
     display: flex;
     flex-direction: column;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    max-width: 940px;
     padding: 100px 500px 90px 500px;
-    align-items: center;
 }
 
 .quoter
@@ -158,4 +159,12 @@ button {
 
 .call button {
     border: white solid 2px;
+}
+
+/* FOOTER */
+
+.footer {
+    justify-content: center;
+    text-align: center;
+    padding: 40px 10px;
 }
